# Handbook_Data-Science

./: .gitignore  250617.ipynb  250624_output.xlsx  Google-sheets.md  README.md  Source.gv  _0_Economics.ipynb  _0_Intro-to-Data-Science.ipynb  _0_Mathematics.ipynb  _0_Probability.ipynb  _0_Sequence_comparison.ipynb  _0_Statistics.ipynb  _0_time_series.ipynb  _1_ML_basics.ipynb  _2_ML_supervised.ipynb  _4_ML_DL.ipynb  _6_ML_LLM.ipynb  _6_ML_NLP.ipynb  _GoogleSheets.md  _LaTeX.md  _MLOps.ipynb  _Numpy.ipynb  _Pandas.ipynb  _Pandas_excel.ipynb  _Sympy.ipynb  _Visualisations_dashboards.ipynb  _Visualisations_plot-types.ipynb  _Visualisations_plotly.ipynb  boolean_icons.xlsx  chart_scatter.xlsx  clean_titanic_data.csv  conda-env-2.yml  conda-env.yml  conda-env_data-science-ml-cpu.yml  df_en.csv  preprocessed_titanic_data.csv  pyproject.toml  requirements-2.txt  requirements.txt  weightsAndBiases.ipynb
data-visualisation/: data-visualisation.xlsx
datasets/: CASP14_2020.xlsx  data-to-read.csv  emails.xlsx  players.xlsx
datasets/NLP/: sentiment-analysis.txt
datasets/planets-info/: planets_data_proc.xlsx
models/: fingerprint.pb  keras_metadata.pb  saved_model.pb
my_datasets/: Admission_Predict.csv  CASP14_2020.csv  CASP14_2020.xlsx  Hypercuboids_data.csv  IPDS7_hyperrectangles_2.tsv  data-to-read.csv  df_test.xlsx  emails.xlsx  example1.csv  pandas-groupby.csv  players.xlsx
output/: df_excel_comparison.xlsx  excel_cond_format_df.xlsx  iris_extract.xlsx  markov_generate_sentence_1.json  output.txt
pandas_experiments/: main.ipynb
utils/: time_series.py
(+36 files in other folders)
