[project]
name = "handbook-data-science"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgenii Zorin",email = "zorin.evgenii.m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.30.1,<7.0.0)",
    "google-cloud-bigquery (>=3.38.0,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "db-dtypes (>=1.4.3,<2.0.0)",
    "transformers (>=4.57.0,<5.0.0)",
    "textdistance (>=4.6.3,<5.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
